elastic/k8s/elasticserch/elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: elasticsearch
  labels:
    app: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
      annotations:
        ulimits.nri.containerd.io/container.sleep: |
          - type: memlock
            hard: -1
            soft: -1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                    - k8s-worker-01
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm
                    - arm64
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.15.5
        ports:
        - containerPort: 9200
        resources:
          limits:
            memory: 15Gi
          requests:
            cpu: 2
            memory: 12Gi
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: es-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 10
      volumes:
      - name: es-data
        hostPath:
          path: /usb-disk/usb1/nfs/es
        # persistentVolumeClaim:
        #   claimName: es-disk-claim
      - name: es-p-data
        hostPath:
          path: /usb-disk/usb1/nfs/es-plugins
        # persistentVolumeClaim:
        #   claimName: es-p-disk-claim
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
  - protocol: TCP
    port: 9200
    targetPort: 9200
  #type: LoadBalancer
  type: ClusterIP
